--- a/web/src/app/tasks/view/task-view/task-view.component.html
+++ b/web/src/app/tasks/view/task-view/task-view.component.html
@@ -1,11 +1,11 @@
 <div
   class="section is-medium"
-  *ngIf="taskAndTaskLogs$ | async as taskAndTaskLogs"
+  *ngIf="projectAndTasks$ | async as projectAndTasks"
 >
   <div class="box">
-    <ng-container *ngIf="taskAndTaskLogs.name; else anon">
+    <ng-container *ngIf="projectAndTasks.name; else anon">
       <h1 class="title has-text-centered has-text-primary">
-        {{ taskAndTaskLogs.name }}'s Tasks
+        {{ projectAndTasks.name }}'s Tasks
       </h1>
     </ng-container>
     <ng-template #anon>
@@ -20,17 +20,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let task of taskAndTaskLogs?.tasks; index as i">
+        <tr *ngFor="let task of projectAndTasks?.tasks; index as i">
           <th scope="row">
             <a
-              routerLink="/customers/{{ taskAndTaskLogs.id }}/projects/{{
-                taskAndTaskLogs.id
-              }}/tasks/{{ task.id }}"
+              routerLink="/customers/{{ projectAndTasks.id }}/projects/{{
+                projectAndTasks.id
+              }}/tasks/{{ task.id }}/logs"
               >{{ i + 1 }}</a
             >
           </th>
           <td class="">
-            <a>{{ task.description }}</a>
+            <a
+              routerLink="/customers/{{ projectAndTasks.id }}/projects/{{
+                projectAndTasks.id
+              }}/tasks/{{ task.id }}/logs"
+              >{{ task.description }}</a
+            >
           </td>
           <td class="is-flex is-justify-content-flex-end">
             <fa-icon
