--- a/web/src/app/tasks/form/task-form/task-form.component.html
+++ b/web/src/app/tasks/form/task-form/task-form.component.html
@@ -12,7 +12,7 @@
         <form class="form" [formGroup]="taskFormGroup" (ngSubmit)="submit()">
           <div class="field">
             <label class="label">Description</label>
-            <div class="control">
+            <div class="control has-icons-left">
               <input
                 formControlName="description"
                 class="input"
@@ -20,6 +20,9 @@
                 placeholder="Task description"
                 value=""
               />
+              <span class="icon is-small is-left">
+                <fa-icon [icon]="tasksIcon"></fa-icon>
+              </span>
             </div>
           </div>
           <button type="submit" class="button is-primary">Submit</button>
