--- a/web/src/app/projects/form/project-form/project-form.component.html
+++ b/web/src/app/projects/form/project-form/project-form.component.html
@@ -12,7 +12,7 @@
         <form class="form" [formGroup]="projectFormGroup" (ngSubmit)="submit()">
           <div class="field">
             <label class="label">Name</label>
-            <div class="control">
+            <div class="control has-icons-left">
               <input
                 formControlName="name"
                 class="input"
@@ -20,6 +20,9 @@
                 placeholder="Project name"
                 value=""
               />
+              <span class="icon is-small is-left">
+                <fa-icon [icon]="projectIcon"></fa-icon>
+              </span>
             </div>
           </div>
           <button type="submit" class="button is-primary">Submit</button>
