--- a/web/src/app/authentication/login/login.component.html
+++ b/web/src/app/authentication/login/login.component.html
@@ -2,24 +2,20 @@
   <div class="column is-half">
     <div class="card">
       <div class="card-header level">
-        <p
-          class="card-header-title level-item has-text-centered is-size-2 has-text-primary"
-        >
-          Login
-        </p>
+        <p class="card-header-title level-item has-text-centered is-size-2 has-text-primary"> Login </p>
       </div>
       <div class="card-content">
-        <form class="form" [formGroup]="loginFormGroup" (ngSubmit)="submit()">
+        <form class="form"
+              [formGroup]="loginFormGroup"
+              (ngSubmit)="submit()">
           <div class="field">
             <label class="label">Email</label>
             <div class="control has-icons-left has-icons-right">
-              <input
-                formControlName="emailAddress"
-                class="input"
-                type="email"
-                placeholder="Email input"
-                value=""
-              />
+              <input formControlName="emailAddress"
+                     class="input"
+                     type="email"
+                     placeholder="Email input"
+                     value="" />
               <span class="icon is-small is-left">
                 <fa-icon [icon]="faEnvelope"></fa-icon>
               </span>
@@ -31,13 +27,11 @@
           <div class="field">
             <label class="label">Password</label>
             <div class="control has-icons-left has-icons-right">
-              <input
-                formControlName="password"
-                class="input"
-                type="email"
-                placeholder="Secret Password"
-                value=""
-              />
+              <input formControlName="password"
+                     class="input"
+                     type="email"
+                     placeholder="Secret Password"
+                     value="" />
               <span class="icon is-small is-left">
                 <fa-icon [icon]="faKey"></fa-icon>
               </span>
@@ -46,7 +40,8 @@
               </span>
             </div>
           </div>
-          <button type="submit" class="button is-primary">Submit</button>
+          <button type="submit"
+                  class="button is-primary">Submit</button>
         </form>
       </div>
     </div>
