--- a/web/src/app/shared/navbar/navbar.component.html
+++ b/web/src/app/shared/navbar/navbar.component.html
@@ -1,20 +1,20 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar"
+     role="navigation"
+     aria-label="main navigation">
   <ng-container *ngIf="authService.isLoggedIn | async; else login">
     <div class="container">
       <div class="navbar-brand">
-        <a
-          class="navbar-item is-size-4 has-text-primary"
-          routerLink="/customers"
-        >
+        <a class="navbar-item is-size-4 has-text-primary"
+           routerLink="/customers">
           <h1>Task Force</h1>
         </a>
       </div>
-
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-light" (click)="logout()"> Log out </a>
+              <a class="button is-light"
+                 (click)="logout()"> Log out </a>
             </div>
           </div>
         </div>
@@ -24,19 +24,21 @@
   <ng-template #login>
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item is-size-4 has-text-primary" routerLink="/">
+        <a class="navbar-item is-size-4 has-text-primary"
+           routerLink="/">
           <h1>Task Force</h1>
         </a>
       </div>
-
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-primary" routerLink="/register">
+              <a class="button is-primary"
+                 routerLink="/register">
                 <strong>Sign up</strong>
               </a>
-              <a class="button is-light" routerLink="/login"> Log in </a>
+              <a class="button is-light"
+                 routerLink="/login"> Log in </a>
             </div>
           </div>
         </div>
