--- a/web/src/app/authentication/register/register.component.html
+++ b/web/src/app/authentication/register/register.component.html
@@ -29,7 +29,7 @@
             <div class="control has-icons-left has-icons-right">
               <input formControlName="password"
                      class="input"
-                     type="email"
+                     type="password"
                      placeholder="Secret Password"
                      value="" />
               <span class="icon is-small is-left">
