--- a/web/src/app/task-logs/form/task-log-form.component.html
+++ b/web/src/app/task-logs/form/task-log-form.component.html
@@ -1,1 +1,30 @@
-<p>task-log-form works!</p>
+<div class="columns is-centered mt-6">
+  <div class="column is-half">
+    <div class="card">
+      <div class="card-header level">
+        <p class="card-header-title level-item has-text-centered is-size-2 has-text-primary"> Log Time </p>
+      </div>
+      <div class="card-content"
+           *ngIf="taskLogFormGroup">
+        <form class="form"
+              [formGroup]="taskLogFormGroup"
+              (ngSubmit)="submit()">
+          <div class="field">
+            <label class="label">Description</label>
+            <div class="control has-icons-left">
+              <input formControlName="durationInMinutes"
+                     class="input"
+                     type="number"
+                     placeholder="Task duration" />
+              <span class="icon is-small is-left">
+                <fa-icon [icon]="clockIcon"></fa-icon>
+              </span>
+            </div>
+          </div>
+          <button type="submit"
+                  class="button is-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
