--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -3,8 +3,17 @@
     <app-navbar></app-navbar>
   </div>
   <div class="container">
-    <div class="">
-      <router-outlet></router-outlet>
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <div class="section is-medium mx-6">
+          <div class="box px-6 pb-6">
+            <div class="pb-6">
+              <app-breadcrumbs></app-breadcrumbs>
+            </div>
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
