--- a/web/src/app/customers/view/customer-view.component.html
+++ b/web/src/app/customers/view/customer-view.component.html
@@ -1,38 +1,32 @@
-<div class="section is-medium">
-  <div class="box">
-    <h1 class="title has-text-centered has-text-primary">Customers</h1>
-    <table class="table is-fullwidth">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th class=""
-              scope="col">Name</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let customer of customers$ | async; index as i">
-          <th scope="row">{{ i + 1 }}</th>
-          <td class="">
-            <a routerLink="/customers/{{ customer.id }}/projects">{{
+<h1 class="title has-text-centered has-text-primary">Customers</h1>
+<table class="table is-fullwidth">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th class=""
+          scope="col">Name</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let customer of customers$ | async; index as i">
+      <th scope="row">{{ i + 1 }}</th>
+      <td class="">
+        <a routerLink="/customers/{{ customer.id }}/projects">{{
               customer.name
             }}</a>
-          </td>
-          <td class="is-flex is-justify-content-flex-end">
-            <fa-icon class="mr-6"
-                     [icon]="edit"
-                     routerLink="{{ customer.id }}/edit"></fa-icon>
-            <fa-icon [icon]="trash"
-                     (click)="deleteCustomer(customer.id)"></fa-icon>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="columns is-full">
-      <div class="column is-flex is-justify-content-flex-end">
-        <button class="button is-info is-small"
-                routerLink="new"> Add Customer </button>
-      </div>
-    </div>
-  </div>
+      </td>
+      <td class="is-flex is-justify-content-flex-end">
+        <fa-icon class="mr-6"
+                 [icon]="edit"
+                 routerLink="{{ customer.id }}/edit"></fa-icon>
+        <fa-icon [icon]="trash"
+                 (click)="deleteCustomer(customer.id)"></fa-icon>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="is-flex is-justify-content-flex-end">
+  <button class="button is-primary"
+          routerLink="new"> Add Customer </button>
 </div>
