--- a/web/src/app/projects/form/project-form/project-form.component.html
+++ b/web/src/app/projects/form/project-form/project-form.component.html
@@ -1,31 +1,25 @@
-<div class="columns is-centered mt-6">
-  <div class="column is-half">
-    <div class="card">
-      <div class="card-header level">
-        <p class="card-header-title level-item has-text-centered is-size-2 has-text-primary"> Project </p>
-      </div>
-      <div class="card-content"
-           *ngIf="projectFormGroup">
-        <form class="form"
-              [formGroup]="projectFormGroup"
-              (ngSubmit)="submit()">
-          <div class="field">
-            <label class="label">Name</label>
-            <div class="control has-icons-left">
-              <input formControlName="name"
-                     class="input"
-                     type="text"
-                     placeholder="Project name"
-                     value="" />
-              <span class="icon is-small is-left">
-                <fa-icon [icon]="projectIcon"></fa-icon>
-              </span>
-            </div>
-          </div>
-          <button type="submit"
-                  class="button is-primary">Submit</button>
-        </form>
+<ng-container class="card-content"
+              *ngIf="projectFormGroup">
+  <p class="card-header-title level-item has-text-centered is-size-2 has-text-primary"> Project </p>
+  <form class="form"
+        [formGroup]="projectFormGroup"
+        (ngSubmit)="submit()">
+    <div class="field">
+      <label class="label">Name</label>
+      <div class="control has-icons-left">
+        <input formControlName="name"
+               class="input"
+               type="text"
+               placeholder="Project name"
+               value="" />
+        <span class="icon is-small is-left">
+          <fa-icon [icon]="projectIcon"></fa-icon>
+        </span>
       </div>
     </div>
-  </div>
-</div>
+    <div class=" is-flex is-justify-content-flex-end">
+      <button type="submit"
+              class="button is-primary">Submit</button>
+    </div>
+  </form>
+</ng-container>
