cleaned up console loggers

--- a/web/src/app/task-logs/form/task-log-form.component.html
+++ b/web/src/app/task-logs/form/task-log-form.component.html
@@ -5,7 +5,7 @@
         [formGroup]="taskLogFormGroup"
         (ngSubmit)="submit()">
     <div class="field">
-      <label class="label">Description</label>
+      <label class="label">Duration (minutes)</label>
       <div class="control has-icons-left">
         <input formControlName="durationInMinutes"
                class="input"
