--- a/web/src/app/tasks/view/task-view/task-view.component.html
+++ b/web/src/app/tasks/view/task-view/task-view.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="projectAndTasks$ | async as projectAndTasks">
   <ng-container *ngIf="projectAndTasks.name; else anon">
-    <h1 class="title has-text-centered has-text-primary"> {{ projectAndTasks.name }}'s Tasks </h1>
+    <h1 class="title has-text-centered has-text-primary"> {{ projectAndTasks.name }} - Tasks </h1>
   </ng-container>
   <ng-template #anon>
     <h1 class="title has-text-centered has-text-primary">Tasks</h1>
@@ -9,8 +9,7 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th class=""
-            scope="col">Description</th>
+        <th scope="col">Description</th>
         <th scope="col">Time Logged</th>
         <th scope="col"></th>
       </tr>
@@ -23,9 +22,8 @@
               }}/tasks/{{ task.id }}/logs">{{ i + 1 }}</a>
         </th>
         <td class="">
-          <a routerLink="/customers/{{ projectAndTasks.id }}/projects/{{
-                projectAndTasks.id
-              }}/tasks/{{ task.id }}/logs">{{ task.description }}</a>
+          <a routerLink="/customers/{{ customerId }}/projects/{{projectId}}/tasks/{{ task.id }}/logs">
+            {{ task.description }} </a>
         </td>
         <td>{{getTotalTimeLogged(task.taskLogs)}} minutes</td>
         <td class="is-flex is-justify-content-flex-end">
