--- a/web/src/app/task-logs/view/task-log-view.component.html
+++ b/web/src/app/task-logs/view/task-log-view.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="taskAndTaskLogs$ | async as taskAndTaskLogs">
-  <h1 class="title has-text-centered has-text-primary">Time Logs</h1>
+  <h1 class="title has-text-centered has-text-primary">{{taskAndTaskLogs.description}} - Time Logs</h1>
   <table class="table is-fullwidth">
     <thead>
       <tr>
